--- a/kla_connect_env/.env_sample
+++ b/kla_connect_env/.env_sample
@@ -5,3 +5,10 @@ DB_USER=kla_connect
 DB_PASSWORD=kla_connect
 DB_HOST=localhost
 DB_PORT=5432
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST= smtp.gmail.com
+EMAIL_HOST_USER=XXXXX@XXXX.com
+EMAIL_HOST_PASSWORD=XXXXXX
+EMAIL_USE_TLS=on
+EMAI_PORT=587
+DEFAULT_FROM_EMAIL=XXXX@XXXX.com
