--- a/kla_connect_env/.env_sample
+++ b/kla_connect_env/.env_sample
@@ -10,5 +10,5 @@ EMAIL_HOST= smtp.gmail.com
 EMAIL_HOST_USER=XXXXX@XXXX.com
 EMAIL_HOST_PASSWORD=XXXXXX
 EMAIL_USE_TLS=on
-EMAI_PORT=587
+EMAIL_PORT=587
 DEFAULT_FROM_EMAIL=XXXX@XXXX.com
