import location data

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ django-cors-headers
 Pillow
 django-notifications-hq==1.7.0
 rest-framework-generic-relations==2.1.0
+xlrd==2.0.1
+pandas==1.4.1
+openpyxl==3.0.9
